--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 		</aside>
 	</main>
 	<footer>
-		<p>&copy; 2022, San Joaquin Valley Town Hall, Fresno, CA 93755</p>
+		<p>&copy; David Villafranca - November 21, 2023</p>
 	</footer>
 </body>
 </html>
