updating base files

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 	<nav id="nav_menu">
     	<ul>
         	<li><a href="index.html" class="current">Home</a></li>
-        	<li><a href="speakers.html">Speakers</a></li>
-        	<li><a href="luncheons.html">Luncheons</a></li>
-        	<li><a href="tickets.html">Tickets</a></li>
-        	<li><a href="aboutus.html"> About Us</a>
+        	<li><a href="#">Speakers</a></li>
+        	<li><a href="#">Luncheons</a></li>
+        	<li><a href="#">Tickets</a></li>
+        	<li><a href="#"> About Us</a>
             	<ul>
                 	<li><a href="#">Our History</a></li>
                 	<li><a href="#">Board of Directors</a></li>
@@ -63,7 +63,7 @@
 				fieldwork in a number of countries in Africa.</p>
 				<p>
 					<a href="speakers/c7_sampson.html">Read more.</a>&nbsp;
-					<a href="media/sampson.swf" target="_blank">Or play video.</a>
+					<a href="media/sampson.mp4" target="_blank">Or play video.</a>
 				</p>
 			</article>
 			
